# OfficePresenceScheduler

./: .gitignore  Dockerfile  README.md
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml
